--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license-file = "./LICENSE"
 
 [dependencies]
 miniz_oxide = { version = "0.5.1", optional = true }
+rayon = { version = "1.7.0", optional = true }
 zip-format = { version = "0.1.0", path = "./zip-format" }
 
 [dev-dependencies]
@@ -27,7 +28,7 @@ write-deflate = ["miniz_oxide"]
 
 [[example]]
 name = "extract_to_tempdir"
-required-features = ["std"]
+required-features = ["std", "rayon"]
 [[example]]
 name = "simple_inspection"
 required-features = ["std"]
