--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,7 +90,7 @@ jobs:
           cargo fuzz build fuzz_read
       - name: run fuzz
         run: |
-          cargo fuzz run fuzz_read -- -timeout=1s -runs=10000000
+          cargo fuzz run fuzz_read -- -timeout=1s -jobs=10 -workers=2 -runs=1000000 -max_len=5000000000
 
   fuzz_write:
     runs-on: ubuntu-latest
@@ -109,4 +109,4 @@ jobs:
           cargo fuzz build fuzz_write
       - name: run fuzz
         run: |
-          cargo fuzz run fuzz_write -- -timeout=1s -runs=3000000 -max_len=5000000000
+          cargo fuzz run fuzz_write -- -timeout=1s -jobs=30 -workers=2 -runs=100000 -max_len=5000000000
