--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ arbitrary = { version = "1.3.0", features = ["derive"] }
 
 [dev-dependencies]
 bencher = "0.1.5"
-getrandom = "0.2.9"
+getrandom = { version = "0.2.9", features = ["js"] }
 walkdir = "2.3.3"
 time = { version = "0.3.21", features = ["formatting", "macros"] }
 
