--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 pbkdf2 = {version = "0.12.1", optional = true }
 sha1 = {version = "0.10.5", optional = true }
 time = { version = "0.3.21", optional = true, default-features = false, features = ["std"] }
-zstd = { version = "0.12.3", optional = true }
+zstd = { version = "0.12.3", optional = true, default-features = false }
 zopfli = { version = "0.7.4", optional = true }
 
 [target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
