--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ edition = "2021"
 aes = { version = "0.8.2", optional = true }
 byteorder = "1.4.3"
 bzip2 = { version = "0.4.4", optional = true }
+chrono = { version = "0.4.25", optional = true }
 constant_time_eq = { version = "0.2.5", optional = true }
 crc32fast = "1.3.2"
 flate2 = { version = "1.0.26", default-features = false, optional = true }
@@ -40,6 +41,7 @@ time = { version = "0.3.21", features = ["formatting", "macros"] }
 
 [features]
 aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
+chrono = ["chrono/default"]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
