--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ constant_time_eq = { version = "0.3.0", optional = true }
 crc32fast = "1.4.0"
 flate2 = { version = "1.0.28", default-features = false, optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
+num_enum = "0.6.1"
 pbkdf2 = { version = "0.12.2", optional = true }
 sha1 = { version = "0.10.6", optional = true }
 time = { workspace = true, optional = true, features = [
