--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,17 +14,21 @@ rust-version = "1.59.0"
 [dependencies]
 aes = { version = "0.8.2", optional = true }
 byteorder = "1.4.3"
+bytes = "1.5.0"
 bzip2 = { version = "0.4.3", optional = true }
-crossbeam-utils = "0.8.8"
 constant_time_eq = { version = "0.1.5", optional = true }
 crc32fast = "1.3.2"
 flate2 = { version = "1.0.23", default-features = false, optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
+num_cpus = "1.16"
 pbkdf2 = {version = "0.11.0", optional = true }
 rayon = { version = "1.7.0" }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
 zstd = { version = "0.11.2", optional = true }
+
+[target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
+crossbeam-utils = "0.8.8"
 
 [dev-dependencies]
 bencher = "0.1.5"
