--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ constant_time_eq = { version = "0.1.5", optional = true }
 crc32fast = "1.3.2"
 flate2 = { version = "1.0.23", default-features = false, optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
-num_cpus = "1.16"
 pbkdf2 = {version = "0.11.0", optional = true }
+once_cell = "1.18.0"
 rayon = { version = "1.7.0" }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
