--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,18 +13,23 @@ rust-version = "1.59.0"
 
 [dependencies]
 aes = { version = "0.8.2", optional = true }
+async-stream = "0.3.5"
 byteorder = "1.4.3"
 bytes = "1"
 bzip2 = { version = "0.4.3", optional = true }
 constant_time_eq = { version = "0.1.5", optional = true }
 crc32fast = "1.3.2"
 flate2 = { version = "1.0.23", default-features = false, optional = true }
+futures-core = "0.3.28"
+futures-util = "0.3.28"
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
+indexmap = "2"
 parking_lot = { version = "0.12.1", features = ["arc_lock"] }
 pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
-tokio = { version = "1.32.0", features = ["rt", "io-util", "sync"] }
+tokio = { version = "1.32.0", features = ["rt", "io-util", "sync", "fs"] }
+tokio-stream = "0.1.14"
 tokio-util = { version = "0.7.9", features = ["io", "io-util"] }
 zstd = { version = "0.11.2", optional = true }
 
@@ -35,7 +40,9 @@ crossbeam-utils = "0.8.8"
 bencher = "0.1.5"
 getrandom = "0.2.5"
 walkdir = "2.3.2"
+tempfile = "3.8.0"
 time = { version = "0.3.7", features = ["formatting", "macros"] }
+tokio-test = "0.4.3"
 
 [features]
 aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
