--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,11 +38,14 @@ crossbeam-utils = "0.8.8"
 
 [dev-dependencies]
 bencher = "0.1.5"
+criterion = { version = "0.5", features = ["async_tokio"] }
 getrandom = "0.2.5"
-walkdir = "2.3.2"
+once_cell = "1.18.0"
 tempfile = "3.8.0"
 time = { version = "0.3.7", features = ["formatting", "macros"] }
+tokio = { features = ["rt-multi-thread"] }
 tokio-test = "0.4.3"
+walkdir = "2.3.2"
 
 [features]
 aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
@@ -59,3 +62,12 @@ harness = false
 [[bench]]
 name = "read_metadata"
 harness = false
+
+[[bench]]
+name = "extract"
+harness = false
+
+[profile.release]
+strip                   = false
+debug                   = true
+# lto                     = true
