--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ bencher = "0.1.5"
 criterion = { version = "0.5", features = ["async_tokio"] }
 getrandom = "0.2.5"
 once_cell = "1.18.0"
+sha3 = "0.10.8"
 tempfile = "3.8.0"
 time = { version = "0.3.7", features = ["formatting", "macros"] }
 tokio = { features = ["rt-multi-thread"] }
