--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ indexmap = "2"
 parking_lot = { version = "0.12.1", features = ["arc_lock"] }
 pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
+static_assertions = "1.1.0"
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
 tokio = { version = "1.32.0", features = ["rt", "io-util", "sync", "fs", "macros"] }
 tokio-stream = "0.1.14"
@@ -44,7 +45,7 @@ once_cell = "1.18.0"
 sha3 = "0.10.8"
 tempfile = "3.8.0"
 time = { version = "0.3.7", features = ["formatting", "macros"] }
-tokio = { features = ["rt-multi-thread"] }
+tokio = { version = "1", features = ["rt-multi-thread"] }
 tokio-test = "0.4.3"
 walkdir = "2.3.2"
 
