--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ futures-core = "0.3.28"
 futures-util = "0.3.28"
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 indexmap = "2"
+num_enum = "0.7.0"
 parking_lot = { version = "0.12.1", features = ["arc_lock"] }
 pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
