--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,12 +25,13 @@ futures-util = "0.3.28"
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 indexmap = "2"
 num_enum = "0.7.0"
+once_cell = "1.18.0"
 parking_lot = { version = "0.12.1", features = ["arc_lock"] }
 pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 static_assertions = "1.1.0"
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
-tokio = { version = "1.32.0", features = ["rt", "io-util", "sync", "fs", "macros", "rt-multi-thread"] }
+tokio = { version = "1.32.0", features = ["rt", "io-util", "sync", "fs", "macros"] }
 tokio-stream = "0.1.14"
 tokio-util = { version = "0.7.9", features = ["io", "io-util"] }
 zstd = { version = "0.11.2", optional = true }
@@ -42,7 +43,6 @@ crossbeam-utils = "0.8.8"
 bencher = "0.1.5"
 criterion = { version = "0.5", features = ["async_tokio"] }
 getrandom = "0.2.5"
-once_cell = "1.18.0"
 sha3 = "0.10.8"
 tempfile = "3.8.0"
 time = { version = "0.3.7", features = ["formatting", "macros"] }
