--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ async-stream = "0.3.5"
 byteorder = "1.4.3"
 bytes = "1"
 bzip2 = { version = "0.4.3", optional = true }
+cfg-if = "1"
 constant_time_eq = { version = "0.1.5", optional = true }
 crc32fast = "1.3.2"
 flate2 = { version = "1.0.23", default-features = false, optional = true }
