--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,19 +21,19 @@ cfg-if = "1"
 constant_time_eq = { version = "0.1.5", optional = true }
 crc32fast = "1.3.2"
 flate2 = { version = "1.0.23", default-features = false, optional = true }
-futures-core = "0.3.28"
-futures-util = "0.3.28"
+futures-core = { version = "0.3", optional = true }
+futures-util = { version = "0.3", optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 indexmap = "2"
 num_enum = "0.7.0"
 once_cell = "1.18.0"
-parking_lot = { version = "0.12.1", features = ["arc_lock"] }
-pin-project-lite = "0.2"
+parking_lot = { version = "0.12.1", features = ["arc_lock"], optional = true }
+pin-project-lite = { version = "0.2", optional = true }
 pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
-tokio = { version = "1.32.0", features = ["rt", "io-util", "sync", "fs", "macros"] }
-tokio-stream = "0.1.14"
+tokio = { version = "1", features = ["rt", "io-util", "sync", "fs", "macros"], optional = true }
+tokio-stream = { version = "0.1.14", optional = true }
 zstd = { version = "0.11.2", optional = true }
 
 [target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
@@ -56,8 +56,9 @@ aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
+tokio-async = ["dep:tokio", "dep:tokio-stream", "dep:parking_lot", "dep:pin-project-lite", "dep:futures-core", "dep:futures-util"]
 unreserved = []
-default = ["aes-crypto", "bzip2", "deflate", "time", "zstd"]
+default = ["aes-crypto", "bzip2", "deflate", "time", "zstd", "tokio-async"]
 
 [[bench]]
 name = "read_entry"
