--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,8 @@ rust-version = "1.59.0"
 
 [dependencies]
 aes = { version = "0.8.2", optional = true }
-async-stream = "0.3.5"
+async-stream = { version = "0.3.5", optional = true }
 byteorder = "1.4.3"
-bytes = "1"
 bzip2 = { version = "0.4.3", optional = true }
 cfg-if = "1"
 constant_time_eq = { version = "0.1.5", optional = true }
@@ -24,9 +23,8 @@ flate2 = { version = "1.0.23", default-features = false, optional = true }
 futures-core = { version = "0.3", optional = true }
 futures-util = { version = "0.3", optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
-indexmap = "2"
-num_enum = "0.7.0"
-once_cell = "1.18.0"
+indexmap = { version =  "2", optional = true }
+once_cell = { version = "1.18.0", optional = true }
 parking_lot = { version = "0.12.1", features = ["arc_lock"], optional = true }
 pin-project-lite = { version = "0.2", optional = true }
 pbkdf2 = {version = "0.11.0", optional = true }
@@ -43,7 +41,6 @@ crossbeam-utils = "0.8.8"
 bencher = "0.1.5"
 criterion = { version = "0.5", features = ["async_tokio"] }
 getrandom = "0.2.5"
-sha3 = "0.10.8"
 tempfile = "3.8.0"
 time = { version = "0.3.7", features = ["formatting", "macros"] }
 tokio = { version = "1", features = ["rt-multi-thread"] }
@@ -56,7 +53,10 @@ aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
-tokio-async = ["dep:tokio", "dep:tokio-stream", "dep:parking_lot", "dep:pin-project-lite", "dep:futures-core", "dep:futures-util"]
+tokio-async = [
+  "dep:tokio", "dep:tokio-stream", "dep:parking_lot", "dep:pin-project-lite", "dep:futures-core",
+  "dep:futures-util", "dep:async-stream", "dep:indexmap", "dep:once_cell",
+]
 unreserved = []
 default = ["aes-crypto", "bzip2", "deflate", "time", "zstd", "tokio-async"]
 
