--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,6 @@ hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 indexmap = { version =  "2", optional = true }
 once_cell = { version = "1.18.0", optional = true }
 parking_lot = { version = "0.12.1", features = ["arc_lock"], optional = true }
-pin-project = { version = "1.1.3", optional = true }
 pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
@@ -54,7 +53,7 @@ deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
 tokio-async = [
-  "dep:tokio", "dep:tokio-stream", "dep:parking_lot", "dep:pin-project", "dep:futures-core",
+  "dep:tokio", "dep:tokio-stream", "dep:parking_lot", "dep:futures-core",
   "dep:futures-util", "dep:async-stream", "dep:indexmap", "dep:once_cell",
 ]
 unreserved = []
