--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ futures-core = { version = "0.3", optional = true }
 futures-util = { version = "0.3", optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 indexmap = { version =  "2", optional = true }
+libc = { version = "0.2.148", optional = true }
 num_enum = "0.6.1"
 once_cell = { version = "1.18.0", optional = true }
 parking_lot = { version = "0.12.1", features = ["arc_lock"], optional = true }
@@ -56,7 +57,7 @@ deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
 tokio-async = [
-  "dep:tokio", "dep:tokio-stream", "dep:parking_lot", "dep:futures-core",
+  "dep:tokio", "dep:tokio-stream", "dep:parking_lot", "dep:libc", "dep:futures-core",
   "dep:futures-util", "dep:async-stream", "dep:indexmap", "dep:once_cell",
 ]
 unreserved = []
