--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
 tokio = { version = "1", features = ["rt", "io-util", "sync", "fs", "macros", "net"], optional = true }
+tokio-pipe = { version = "0.2.12", optional = true }
 tokio-stream = { version = "0.1.14", optional = true }
 zstd = { version = "0.11.2", optional = true }
 
@@ -57,7 +58,7 @@ deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
 tokio-async = [
-  "dep:tokio", "dep:tokio-stream", "dep:parking_lot", "dep:libc", "dep:futures-core",
+  "dep:tokio", "dep:tokio-pipe", "dep:tokio-stream", "dep:parking_lot", "dep:libc", "dep:futures-core",
   "dep:futures-util", "dep:async-stream", "dep:indexmap", "dep:once_cell",
 ]
 unreserved = []
