--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 static_assertions = { version = "1.1.0", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
-tokio = { version = "1", features = ["rt", "io-util", "sync", "fs", "macros", "net"], optional = true }
+tokio = { version = "1", features = ["rt", "io-util", "sync", "fs", "macros"], optional = true }
 tokio-pipe = { version = "0.2.12", optional = true }
 tokio-stream = { version = "0.1.14", optional = true }
 zstd = { version = "0.11.2", optional = true }
