--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,6 @@ futures-util = { version = "0.3", optional = true }
 hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 indexmap = { version =  "2", optional = true }
 libc = { version = "0.2.148", optional = true }
-memchr = { version = "2.6.4", optional = true }
 num_enum = "0.6.1"
 once_cell = { version = "1.18.0", optional = true }
 parking_lot = { version = "0.12.1", features = ["arc_lock"], optional = true }
@@ -39,6 +38,11 @@ tokio = { version = "1", features = ["rt", "io-util", "sync", "fs", "macros"], o
 tokio-pipe = { version = "0.2.12", optional = true }
 tokio-stream = { version = "0.1.14", optional = true }
 zstd = { version = "0.11.2", optional = true }
+
+[dependencies.memchr2]
+git = "https://github.com/cosmicexplorer/memchr"
+rev= "ce7b8e606410f6c81a63f45abb24c5b5aab5d741"
+package = "memchr"
 
 [target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
 crossbeam-utils = "0.8.8"
@@ -62,7 +66,6 @@ deflate-zlib = ["flate2/zlib"]
 tokio-async = [
   "dep:tokio", "dep:tokio-pipe", "dep:tokio-stream", "dep:parking_lot", "dep:libc", "dep:futures-core",
   "dep:futures-util", "dep:async-stream", "dep:indexmap", "dep:once_cell", "dep:static_assertions",
-  "dep:memchr",
 ]
 unreserved = []
 default = ["aes-crypto", "bzip2", "deflate", "time", "zstd", "tokio-async"]
