--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ sha1 = {version = "0.10.1", optional = true }
 static_assertions = { version = "1.1.0", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
 tokio = { version = "1", features = ["rt", "io-util", "sync", "fs", "macros"], optional = true }
+tokio-pipe = { git = "https://github.com/cosmicexplorer/tokio-pipe", rev = "c44321ae17b4324a8ccaa4f687a8f68259fdca30", optional = true }
 tokio-stream = { version = "0.1.14", optional = true }
 zstd = { version = "0.11.2", optional = true }
 
@@ -63,7 +64,7 @@ deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
 tokio-async = [
-  "dep:tokio", "dep:memchr2", "dep:tokio-stream", "dep:parking_lot", "dep:libc", "dep:futures-core",
+  "dep:tokio", "dep:memchr2", "dep:tokio-stream", "dep:tokio-pipe", "dep:parking_lot", "dep:libc", "dep:futures-core",
   "dep:futures-util", "dep:async-stream", "dep:indexmap", "dep:once_cell", "dep:static_assertions",
 ]
 unreserved = []
