--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ pbkdf2 = {version = "0.11.0", optional = true }
 rayon = { version = "1.8.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 static_assertions = { version = "1.1.0", optional = true }
+tempfile = { version = "3.8.0", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
 tokio = { version = "1", features = ["rt", "io-util", "sync", "fs", "macros"], optional = true }
 tokio-pipe = { git = "https://github.com/cosmicexplorer/tokio-pipe", rev = "c44321ae17b4324a8ccaa4f687a8f68259fdca30", optional = true }
@@ -67,6 +68,7 @@ deflate-zlib = ["flate2/zlib"]
 tokio-async = [
   "dep:tokio", "dep:memchr2", "dep:tokio-stream", "dep:tokio-pipe", "dep:parking_lot", "dep:libc", "dep:futures-core",
   "dep:futures-util", "dep:async-stream", "dep:indexmap", "dep:once_cell", "dep:static_assertions", "dep:rayon",
+  "dep:tempfile",
 ]
 unreserved = []
 default = ["aes-crypto", "bzip2", "deflate", "time", "zstd", "tokio-async"]
