--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ hmac = { version = "0.12.1", optional = true, features = ["reset"] }
 pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
-zstud-sys = { version = "0.1.3", optional = true }
+zstd = { version = "0.11.2", default-features = false, optional = true }
 
 [target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
 crossbeam-utils = "0.8.8"
@@ -39,7 +39,7 @@ deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
 unreserved = []
-default = ["aes-crypto", "bzip2-rs", "deflate", "time", "zstud-sys"]
+default = ["aes-crypto", "bzip2-rs", "deflate", "time", "zstd"]
 
 [[bench]]
 name = "read_entry"
