--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,15 +81,13 @@ jobs:
 
   fuzz_read:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust: [stable, 1.67.0, nightly]
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: ${{ matrix.rust }}
+          toolchain: nightly
           override: true
 
       - run: cargo install cargo-fuzz
@@ -109,15 +107,13 @@ jobs:
 
   fuzz_write:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust: [stable, 1.67.0, nightly]
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: ${{ matrix.rust }}
+          toolchain: nightly
           override: true
 
       - run: cargo install cargo-fuzz
@@ -137,15 +133,13 @@ jobs:
 
   fuzz_write_with_no_features:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust: [stable, 1.67.0, nightly]
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: ${{ matrix.rust }}
+          toolchain: nightly
           override: true
 
       - run: cargo install cargo-fuzz
