--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ pbkdf2 = {version = "0.11.0", optional = true }
 sha1 = {version = "0.10.1", optional = true }
 time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
 zstd = { version = "0.11.2", optional = true }
+chrono = { version = "0.4.34" }
 
 [target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
 crossbeam-utils = "0.8.8"
