--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ sha1 = {version = "0.10.6", optional = true }
 time = { version = "0.3.34", optional = true, default-features = false, features = ["std"] }
 zstd = { version = "0.13.0", optional = true, default-features = false }
 zopfli = { version = "0.8.0", optional = true }
-deflate64 = { version = "0.1.7", optional = true }
+deflate64 = { git = "https://github.com/Pr0methean/deflate64-rs.git", optional = true }
 
 [target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
 crossbeam-utils = "0.8.19"
