--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,7 +98,7 @@ jobs:
       - name: run fuzz
         timeout-minutes: 330
         run: |
-          cargo fuzz run fuzz_read -- -timeout=10s -jobs=100 -workers=2 -runs=500000 -max_len=5000000000 -dict=fuzz/fuzz.dict
+          cargo fuzz run fuzz_read -- -timeout=10s -jobs=100 -workers=2 -runs=1000000 -max_len=6000 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
@@ -152,7 +152,7 @@ jobs:
       - name: run fuzz
         timeout-minutes: 330
         run: |
-          cargo fuzz run fuzz_write -- -timeout=10s -jobs=100 -workers=2 -runs=50000 -max_len=5000000000 -dict=fuzz/fuzz.dict
+          cargo fuzz run fuzz_write -- -timeout=10s -jobs=100 -workers=2 -runs=50000 -max_len=2000 -dict=fuzz/fuzz.dict
       - name: Upload any failure inputs
         if: always()
         uses: actions/upload-artifact@v3
