--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -14,6 +14,11 @@ arbitrary = { version = "1.3.0", features = ["derive"] }
 
 [dependencies.zip_next]
 path = ".."
+default-features = false
+
+[features]
+zip_next_defaults = ["zip_next/default"]
+default = ["zip_next_defaults"]
 
 # Prevent this from interfering with workspaces
 [workspace]
